    * 0006 FIX: Checkboxes for hosts/services were missing on modified views...
    * 0284 FIX: Context help toggled on/off randomly...
    * 0285 FIX: Fixed bookmarking of absolute URLs or PNP/NagVis URLs in sidebar snapin...

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0216 Supporting float values as SNMP timeout value now...
    * 0048 FIX: Tests on host diagnose page are executed parallel now...
    * 0033 FIX: Fixed problem when saving settings in WATOs host diagnostic page...
    * 0205 FIX: NagVis related permissions of roles can be edited again...
    * 0207 FIX: Explicit communities were not saved in all cases...
    * 0094 FIX: Hide SNMPv3 credentials in WATO...
    * 0212 FIX: Fixed broken site edit page in case a TCP socket has been configured...
    * 0095 FIX: Fixed problem with portnumber in Wato Distributed Monitoring dialog
    * 0213 FIX: LDAP: Various small improvements for handling the LDAP user connector...
    * 0039 FIX: Fixed exception on displaying WATO helptexts in the global settings...
    * 0219 FIX: Fixed display problems in WATO folders with long contact group names
    * 0220 FIX: Added HTML escaping to several global settings attributes...
    * 0234 FIX: Improved handling of interface inventory states / types...

    Notifications:
    * 0005 Added notification script for sending SMS via mobilant.com...
    * 0032 FIX: Fixed problem when forwarding notification mails in windows...
    * 0218 FIX: Fixed rendering of HTML mails for Outlook (at least 2013)...

    Reporting & Availability:
    * 0051 Option for showing timeline directly in availability table...
    * 0052 Visual colorization of availability according to levels...
    * 0054 New labelling options for availability table...
    * 0055 Allow grouping by host, host group or service group...
    * 0056 New concept of service periods in availability reporting...
    * 0002 You can now annotate events in the availability reporting...
