@@ -1,0 +1,9 @@
+Title: Improved online help for LDAP connections
+Level: 2
+Component: wato
+Version: 1.2.3i7
+Date: 1385481093
+Class: feature
+
+When configuring LDAP synchronization in WATO, the online help is even more
+helpful now. Hints, examples and links have been added at multiple areas.
