@@ -876,6 +876,11 @@ div.help table.help td.tt {
     font-family: courier, monospace;
 }
 
+div.help tt {
+    font-family: courier, monospace;
+    color: #000099;
+}
+
 /*--Various----------------------------------------------------------------.
 |                __     __         _                                       |
 |                \ \   / /_ _ _ __(_) ___  _   _ ___                       |
