@@ -50,6 +50,7 @@
     WATO:
     * 0053 New rule for configuring the display_name of a service...
     * 0216 Supporting float values as SNMP timeout value now...
+    * 0082 Improved online help for LDAP connections...
     * 0048 FIX: Tests on host diagnose page are executed parallel now...
     * 0033 FIX: Fixed problem when saving settings in WATOs host diagnostic page...
     * 0205 FIX: NagVis related permissions of roles can be edited again...
